--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+:root {
+}
 .loader {
 	width: 48px;
 	height: 48px;
@@ -33,4 +34,54 @@ progress {
 ::-webkit-progress-value {
 	border-radius: 20px;
 	background: linear-gradient(90deg, #ff3d00, #00d503);
+}
+
+.switch {
+	font-size: 17px;
+	position: relative;
+	display: inline-block;
+	width: 2.5em;
+	height: 1.5em;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* The slider */
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.3);
+	transition: 0.4s;
+	border-radius: 5px;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 1.2em;
+	width: 0.1em;
+	border-radius: 0px;
+	left: 0.3em;
+	bottom: 0.15em;
+	background-color: white;
+	transition: 1s;
+}
+
+input:checked + .slider {
+	background-color: #171717;
+	box-shadow: inset 2px 5px 10px rgb(0, 0, 0);
+}
+
+input:checked + .slider:before {
+	transform: translateX(1.8em) rotate(360deg);
 }
